# ned

./: .gitignore  .markdownlint.jsonc  CHANGELOG.md  Cargo.toml  README.md  TODO.md  agent-instructions.md  deny.toml  justfile  progress.txt
.github/workflows/: ci.yml  delete-workflow-runs.yml
docker/: Dockerfile
man/: compare  compare.sh  install  ned.1  watch  watch.sh
scripts/: build  build.bat  build.sh  build.sh.to-remove  cargo  check  compress  format  install  install_hooks  pre-push  pre-push.sh  test  watch_pre-push
src/: colors.rs  files.rs  main.rs  main.rs.bk  ned_error.rs  options_with_defaults.rs  opts.rs  parameters.rs  source.rs  test_everything.rs  test_files.rs  test_general.rs  test_matches.rs  test_other.rs  tests.rs  tmp8gggnj
src/tests/: files.rs  general.rs  matches.rs  mod.rs  parameters.rs
test/: .hidden_file1  file1.txt  file8.txt  file9.txt  longfile.txt
test/.hidden_dir/: .hidden_file2  file10.txt
test/dir1/: file2.txt  file3.txt
test/dir1/dir4/: file5.txt  file6.txt
test/dir1/dir4/dir5/: file7.txt
test/dir3/: file4.txt
