#
# ned, https://github.com/nevdelap/ned, Cargo.toml
#
# Copyright 2016-2024 Nev Delap (nevdelap at gmail)
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA
# 02110-1301, USA.
#

[package]
name = "ned"
version = "1.3.3"
authors = ["Nev Delap <nevdelap@gmail.com>"]
edition = "2021"

[dependencies]
ansi_term = "0.12.*"
getopts = "0.2.*"
glob = "0.3.*"
libc = "0.2.*"
regex = "1.11.*"
time = "0.3.*"
walkdir = "2.5.*"

[profile.release]
lto = true
