#
# ned, https://github.com/nevdelap/ned, Cargo.toml
#
# Copyright 2016-2026 Nev Delap (nevdelap at gmail)
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA
# 02110-1301, USA.
#

[package]
name = "ned"
version = "2.0.0-draft"
authors = ["Nev Delap <nevdelap@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"

[dependencies]
nu-ansi-term = "0.50.*"
getopts = "0.2.*"
glob = "0.3.*"
# regex is exact to match links to documentation in the README.md, in the --help
# output, and in the man page.
regex = "1.12.2"
walkdir = "2.5.*"
supports-color = "3.0.*"
shell-words = "1.1.*"

[profile.release]
lto = true
